<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/elsa"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:text="@string/escolha_um_dado"
        android:textColor="#100F0F"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonD6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#D87D9C"
        android:text="@string/dado_6"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonD12"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#D87D9C"
        android:text="@string/dado_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonD20"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#D87D9C"
        android:text="@string/dado_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>